<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <SurfaceView
                android:id="@+id/sv_media"
                android:layout_width="1280px"
                android:layout_height="720px" />
            <TextView
                android:textSize="40sp"
                android:layout_width="1280px"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:gravity="center"
                android:padding="0dp"
                android:text="what I see (no data recorded)" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/battery_base"
                    android:textSize="40sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:padding="0dp"
                    android:layout_marginEnd="30dp"
                    android:text="Battery: " />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:text="@string/exit"
                    />
            </LinearLayout>
            <ImageView
                android:contentDescription="@string/navigation"
                android:id="@+id/imageCompass"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/compass" />
            <Switch
                android:id="@+id/switchWander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:layout_margin="5dp"
                android:text="@string/wander"
                android:checked="false"/>
            <Switch
                android:id="@+id/switchSoundRot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:layout_margin="5dp"
                android:text="@string/rotation_at_sound"
                android:checked="true"/>

            <LinearLayout
                android:id="@+id/DEBUG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/name_face"
                    android:textSize="23sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/face_name" />

                <TextView
                    android:id="@+id/time_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/time_of_detection" />

                <TextView
                    android:id="@+id/info_face"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/face_information" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/knowYouMeeting"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimaryLight"
                        android:gravity="center"
                        android:text="@string/knowyoumeeting"
                        />
                    <TextView
                        android:id="@+id/firstMeeting"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimaryLight"
                        android:gravity="center"
                        android:text="@string/firstmeeting"
                        />

                        <TextView
                            android:id="@+id/textCompass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heading" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/handshakes"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/handshakes" />

    <Button
        android:id="@+id/start_interaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:text="@string/start_interaction"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/presentationLock"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorRed"
        android:padding="10dp"
        android:text="@string/presentation_locked"/>

    <ImageView
        android:visibility="gone"
        android:id="@+id/iv_capture"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_capture"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="capture photo"
        />

</LinearLayout>
