<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="22dp"
            android:text="@string/recognized_result" />
        <TextView
            android:id="@+id/tv_speech_recognize_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="33sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/ask_me" />
        <TextView
            android:id="@+id/imageListen"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:textColor="@color/colorBlack"
            android:text="@string/listening_in_progress"
            android:textSize="40sp"
            android:gravity="center"
            android:background="@drawable/listening"
            android:backgroundTint="@color/colorAlphaGreenButton"
            android:contentDescription="@string/listening_in_progress" />
        <Button
            android:id="@+id/wake"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:textColor="@color/colorRedButton"
            android:text="@string/wake_the_robot"
            android:textSize="40sp"
            android:backgroundTintMode="src_over"
            android:backgroundTint="@color/colorAlphaWhite"
            android:background="@drawable/sleeping" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">
        <TextView
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/examples" />
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/grid_view_examples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            android:gravity="center"
            android:stretchMode="columnWidth" >
        </GridView>
    </LinearLayout>


</LinearLayout>